Add image width and height

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,11 @@ html {
   box-sizing: inherit;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+}
+
 section {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
